# MLOPS_Lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
Assignment - 1/: producer.py
quiz-1/: apache_airflow_25_practise_questions.md  apache_beam_spark_ml_25_practise_questions.md  apache_kafka_25_practise_questions.md  apache_spark_25_practice_questions.md  prompt.py  spark_airflow_kafka_beam_spark_ml.md
utils/: logging_config.py  models.py
week1-2/: pyspark_demo.ipynb
week1-2/image_clf_pipeline/: predict.py  run_pipeline.py
week1-2/image_clf_pipeline/config/: config.py
week1-2/image_clf_pipeline/scripts/: 01_download_data.py  02_preprocess.py  03_train.py  04_evaluate.py  (+1 more)
week1-2/practise_1/: dummy_employee_dataset.csv  practice_assignment_1_pyspark_solved.ipynb  practice_assignment_1_pyspark_unsolved.ipynb
week2-3/: taxi_streaming_feature_engineering.ipynb
week2-3/demo-code/: csv_to_json_dag.py  example1.py  example2.py  example4.py  example5.py  pyspark_demo_part_2.ipynb  taxi_pipeline_dag.py
week3-4/: beam_intro_demo.ipynb  sparkml_taxi_demo.ipynb
week3-4/practise_2/: data.json  practice_assignment_2_new_solved.ipynb  practice_assignment_2_new_unsolved.ipynb
week4-5/: feature_engineering.ipynb  ml_training.ipynb
week4-5/practise_3/: practice_assignment_beam_sparkml_solved.ipynb  practice_assignment_beam_sparkml_unsolved.ipynb
week5-6/: llm_prompt_tracking.ipynb  ml_experiment.ipynb  ray_intro.ipynb
week5-6/pratcise_4/: practice_assignment_spark_ml_feature_engineering_statistics_hyperparameter_tuning_unsolved.ipynb
(+2 files in other folders)
