[project]
name = "ai-labs"
version = "0.1.0"
description = "This is ai labs dependencies list"
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "pydantic>=2.12.3"
]

[dependecny-groups]
dev = [
    "ruff>=0.14.4"
    "basepyright>=1.33.0"
    "pytest>=8.0.0"
]


